--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -14,9 +14,11 @@ $sm-up: 'screen and (min-width:768px)';
 $xs: 'screen and (max-width:479px)';
 $xs-up: 'screen and (min-width:480px)';
 
-// typography
-$font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
-
 // colors
 $white: #FFF;
 $black: #000;
+$gray-165: #686868;
+
+// typography
+$base-font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
+$base-font-color: $gray-165;
