--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -25,6 +25,11 @@
   
   h1 {
     margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  h2 {
+    margin-bottom: 60px;
   }
   
   h1, h2, a {
@@ -37,6 +42,6 @@
   }
 
   a {
-    animation-delay: 2.5s;
+    animation-delay: 4s;
   }
 }
