--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -26,13 +26,18 @@
   h1 {
     margin-top: 0;
     margin-bottom: 0;
+
+    a {
+      font-weight: normal;
+      text-decoration: none;
+    }
   }
 
   h2 {
     margin-bottom: 60px;
   }
   
-  h1, h2, a {
+  h1, h2, .last {
     opacity: 0;
     animation: fade-up 3s cubic-bezier(0, 1.2, 1, 1) forwards;
   }
@@ -41,7 +46,7 @@
     animation-delay: 2.15s;
   }
 
-  a {
+  .last {
     animation-delay: 4.65s;
     text-decoration: none;
     font-weight: 100;
